# reflecto

./: .gitignore  README.md  index.html  meson.build  meson_options.txt  reflecto.hpp  zajo-dark.css  zajo-light.css
.github/workflows/: ci.yml  gh-pages.yml
doc/: Jamfile  docinfo.html  reflecto.adoc  zajo-dark.css  zajo-light.css
include/boost/reflecto/: bind_instance.hpp  config.hpp  enum_value_name.hpp  meta_specialization.hpp  name.hpp  ns_bind.hpp  scope_name_of.hpp  scope_traits.hpp  type_name.hpp  value_name.hpp
include/boost/reflecto/detail/: all.hpp  mp11.hpp  pretty_function_traits.hpp
scripts/: generate_single_header.py
test/: Jamfile.v2  _bind_instance_ambiguity_test.cpp  _ns_bind_ambiguity_test.cpp  _unnamed_ns_value_name_test.cpp  bind_instance_currency_test.cpp  bind_instance_exact_scope_of_test.cpp  bind_instance_mixed_markers_test.cpp  bind_instance_multi_arg_test.cpp  bind_instance_multi_rf_test.cpp  bind_instance_scope_walk_test.cpp  bind_instance_unspecialized_test.cpp  enum_introspection_test.cpp  enum_value_name_test.cpp  meta_specialization_test.cpp  name_test.cpp  named_values_test.cpp  ns_bind_currency_test.cpp  ns_bind_multi_arg_test.cpp  ns_bind_ns_walk_test.cpp  ns_bind_two_rf_test.cpp  ns_bind_unspecialized_test.cpp  scope_name_of_test.cpp  scope_traits_test.cpp  test_helpers.hpp  type_name_test.cpp  unnamed_ns_enum_value_name_test.cpp  unnamed_ns_type_name_test.cpp  value_name_test.cpp
